[gd_scene load_steps=32 format=3 uid="uid://chxgvrijiwjix"]

[ext_resource type="Texture2D" uid="uid://1dtkucd4eyja" path="res://assets/spaceShipEngineStarting-Sheet.png" id="1_ymuer"]
[ext_resource type="Script" path="res://script/Sprite2D.gd" id="3_ilhu4"]
[ext_resource type="Script" path="res://script/Area2D.gd" id="4_4tu5c"]
[ext_resource type="Script" path="res://script/CollisionShape2D.gd" id="5_ftsce"]
[ext_resource type="Texture2D" uid="uid://8bb7a0y7v2hl" path="res://assets/upheaval/....jpg" id="5_uxtts"]
[ext_resource type="Texture2D" uid="uid://l535vesqdfm6" path="res://assets/m3a8f0ct.bmp" id="6_0gs6r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0bmmw"]
radius = 100.0
height = 320.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5wrao"]
animation = &"engineOff"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wqc4u"]
animation = &"engineStart"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tod50"]
animation = &"engineTurnOff"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mqnin"]
animation = &"explosion"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xb33t"]
animation = &"flying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gm1df"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ps4rj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j4pqo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_omyso"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_da0iw"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2r2e5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m7ayy"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a1b4x"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_16y7p"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fjqa0"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wylf0"]
states/Start/position = Vector2(120, 106)
states/engineOff/node = SubResource("AnimationNodeAnimation_5wrao")
states/engineOff/position = Vector2(265, 185)
"states/engineStart 2/node" = SubResource("AnimationNodeAnimation_wqc4u")
"states/engineStart 2/position" = Vector2(351, 62)
states/engineTurnOff/node = SubResource("AnimationNodeAnimation_tod50")
states/engineTurnOff/position = Vector2(851, 222)
states/explosion/node = SubResource("AnimationNodeAnimation_mqnin")
states/explosion/position = Vector2(526, 483)
states/flying/node = SubResource("AnimationNodeAnimation_xb33t")
states/flying/position = Vector2(429, 132)
transitions = ["engineStart 2", "flying", SubResource("AnimationNodeStateMachineTransition_gm1df"), "engineTurnOff", "engineOff", SubResource("AnimationNodeStateMachineTransition_ps4rj"), "engineOff", "engineStart 2", SubResource("AnimationNodeStateMachineTransition_j4pqo"), "flying", "engineTurnOff", SubResource("AnimationNodeStateMachineTransition_omyso"), "Start", "engineOff", SubResource("AnimationNodeStateMachineTransition_da0iw"), "engineOff", "explosion", SubResource("AnimationNodeStateMachineTransition_2r2e5"), "engineStart 2", "explosion", SubResource("AnimationNodeStateMachineTransition_m7ayy"), "flying", "explosion", SubResource("AnimationNodeStateMachineTransition_a1b4x"), "engineTurnOff", "explosion", SubResource("AnimationNodeStateMachineTransition_16y7p"), "explosion", "End", SubResource("AnimationNodeStateMachineTransition_fjqa0")]

[sub_resource type="CircleShape2D" id="CircleShape2D_m5ax8"]
radius = 100.0

[sub_resource type="Animation" id="Animation_65o3d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../explosionArea/CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CircleShape2D_m5ax8")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../explosionArea/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../explosionArea/CollisionShape2D:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../explosionArea/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r6i71"]
resource_name = "engineOff"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qo786"]
resource_name = "engineStart"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_c2sfc"]
resource_name = "engineTurnOff"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_yiuwb"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../explosionArea/CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("CircleShape2D_m5ax8"), SubResource("CircleShape2D_m5ax8")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../explosionArea/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../explosionArea/CollisionShape2D:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [100.0, 130.0, 230.0, 270.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../explosionArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_h7yvn"]
resource_name = "flying"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8t8gj"]
_data = {
"RESET": SubResource("Animation_65o3d"),
"engineOff": SubResource("Animation_r6i71"),
"engineStart": SubResource("Animation_qo786"),
"engineTurnOff": SubResource("Animation_c2sfc"),
"explosion": SubResource("Animation_yiuwb"),
"flying": SubResource("Animation_h7yvn")
}

[node name="player" type="Node2D" groups=["player", "shotBy"]]

[node name="player" type="Sprite2D" parent="."]
position = Vector2(25, 24)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_ymuer")
hframes = 12
script = ExtResource("3_ilhu4")

[node name="playerHitBox" type="Area2D" parent="player" groups=["hitbox", "player"]]
visible = false
script = ExtResource("4_4tu5c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/playerHitBox"]
position = Vector2(-1.90735e-06, -130)
shape = SubResource("CapsuleShape2D_0bmmw")
one_way_collision_margin = 0.0
script = ExtResource("5_ftsce")

[node name="Timer" type="Timer" parent="player"]

[node name="death_timer" type="Timer" parent="player"]
wait_time = 2.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2(10, 10)
zoom = Vector2(0.3, 0.3)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 4.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 100.0

[node name="AnimationTree" type="AnimationTree" parent="player"]
root_node = NodePath(".")
tree_root = SubResource("AnimationNodeStateMachine_wylf0")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
root_node = NodePath("../AnimationTree")
libraries = {
"": SubResource("AnimationLibrary_8t8gj")
}
speed_scale = 0.75

[node name="explosionArea" type="Area2D" parent="player"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/explosionArea"]
position = Vector2(10, -60)
shape = SubResource("CircleShape2D_m5ax8")
disabled = true

[node name="machine_gun_timer" type="Timer" parent="player"]
wait_time = 0.05

[node name="machine_gun_timer2" type="Timer" parent="player"]
wait_time = 0.05

[node name="CanvasLayer" type="CanvasLayer" parent="player"]

[node name="ammoTypeLabel" type="RichTextLabel" parent="player/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.237
anchor_top = 0.26
anchor_right = 0.237
anchor_bottom = 0.26
offset_left = -270.024
offset_top = -168.48
offset_right = 229.976
offset_bottom = -18.48
theme_override_font_sizes/normal_font_size = 10
text = "Ammo Type:"
fit_content = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="player/CanvasLayer"]
offset_left = 151.0
offset_top = 2.0
offset_right = 445.0
offset_bottom = 296.0
scale = Vector2(0.3, 0.06)
rounded = true
texture_progress = ExtResource("5_uxtts")
tint_under = Color(0.576471, 1, 1, 1)

[node name="ammoRemainingLabel" type="RichTextLabel" parent="player/CanvasLayer"]
offset_left = 245.0
offset_top = 2.0
offset_right = 316.0
offset_bottom = 42.0
theme_override_colors/default_color = Color(0.878431, 0.105882, 0, 1)
text = "3/3"
fit_content = true

[node name="healthBar" type="TextureProgressBar" parent="player/CanvasLayer"]
offset_left = -1.0
offset_top = 28.0
offset_right = 539.0
offset_bottom = 388.0
scale = Vector2(0.5, 0.07)
texture_progress = ExtResource("6_0gs6r")

[node name="score" type="RichTextLabel" parent="player/CanvasLayer"]
offset_top = 66.0
offset_right = 75.0
offset_bottom = 106.0

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
position = Vector2(224, 63)
shadow_enabled = true

[connection signal="area_entered" from="player/playerHitBox" to="player" method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="player/playerHitBox" to="player/playerHitBox/CollisionShape2D" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="player/playerHitBox" to="player" method="_on_player_hit_box_area_exited"]
[connection signal="timeout" from="player/Timer" to="player" method="_on_timer_timeout"]
[connection signal="timeout" from="player/death_timer" to="player" method="_on_death_delay_timeout"]
[connection signal="timeout" from="player/machine_gun_timer" to="player" method="_on_machine_gun_timer_timeout"]
[connection signal="timeout" from="player/machine_gun_timer2" to="player" method="_on_machine_gun_timer_timeout"]
